Add essential environment-files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[metadata]
+description-file = README.md
+
 [flake8]
 exclude =
     .git
@@ -10,6 +13,7 @@ max-complexity = 10
 
 [yapf]
 column_limit = 100
+spaces_before_comment = 2
 
 [isort]
 skip =
@@ -43,4 +47,3 @@ exclude_lines =
     pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
-
