--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ description-file = README.md
 [flake8]
 exclude =
     .git
-    .venv
     __pycache__
     dist/*
+    docker/*
     examples/*
 max-line-length = 100
 max-complexity = 10
@@ -18,10 +18,10 @@ spaces_before_comment = 2
 [isort]
 skip =
     .git
-    .venv
     __pycache__
-    build
-    deprecated
+    dist
+    docker
+    examples
 
 [pyls]
 configurationSources = ['flake8']
@@ -31,13 +31,12 @@ addopts =
     -v
     --durations=10
     --cache-clear
-    --cov=ml/
+    --cov=tf_keras_vis/
     --cov-report=term-missing
 
 [coverage:run]
 omit =
     tests/*
-    .venv/*
     __pycache__/*
 
 [coverage:report]
