Add ignore setting for ipynb files

--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,8 @@ venv.bak/
 
 # Add by keisen
 *.swp
-examples/**/*.gif
 examples/core*
 examples/sandbox.ipynb
+/*.ipynb
 .node-version
+*.nbconvert.ipynb
