--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
         pip install -e .[development] tensorflow==${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
