--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
-        pip install -e .[development] tensorflow==${{ matrix.tensorflow }}
+        pip install -e .[develop,examples] tensorflow==${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         PYTHONPATH=$PWD:$PYTHONPATH py.test
