--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
       env: TF_VERSION=2.2.0 TF_KERAS_VIS_MAX_STEPS=2
 install:
   - pip install -U pip
-  - pip install -U --force-reinstall -e .[development,examples] tensorflow==$TF_VERSION
+  - pip install -U --force-reinstall -e .[develop,examples] tensorflow==$TF_VERSION
 script:
   - PYTHONPATH=$PWD:$PYTHONPATH py.test
   - jupyter-nbconvert --ExecutePreprocessor.timeout=600 --to notebook --execute examples/attentions.ipynb
