Fixed test bugs

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ addopts =
     --cov=tf_keras_vis/
     --cov-report=term-missing
     --pep8
+    --disable-warnings
 pep8maxlinelength = 100
 pep8maxcomplexity = 10
 pep8ignore =
