--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,9 +34,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools
-        pip install -e .[develop,examples] tensorflow==${{ matrix.tensorflow }}
+        python -m pip install --no-cache-dir --upgrade pip
+        python -m pip install --no-cache-dir --upgrade setuptools
+        python -m pip install --no-cache-dir -e .[develop,examples] tensorflow==${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         PYTHONPATH=$PWD:$PYTHONPATH py.test
