--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --no-cache-dir --upgrade pip
-        python -m pip install --no-cache-dir setuptools wheel twine
+        python -m pip install --no-cache-dir --upgrade setuptools wheel twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
