--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,16 +18,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8]
         tensorflow: [2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1]
         exclude:
           - python-version: 3.8
             tensorflow: 2.0.4
           - python-version: 3.8
-            tensorflow: 2.1.3
-          - python-version: 3.9
-            tensorflow: 2.0.4
-          - python-version: 3.9
             tensorflow: 2.1.3
 
     steps:
