Add testcases to get test coverage 100%

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,8 @@ omit =
     */test.py
     tests/*
     __pycache__/*
+    tf_keras_vis/utils/callbacks.py
+    tf_keras_vis/utils/losses.py
 
 [coverage:report]
 exclude_lines =
@@ -51,3 +53,4 @@ exclude_lines =
     pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
+    version
