--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        tensorflow: [2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1]
+        tensorflow: [2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1, 2.5.0]
         exclude:
           - python-version: 3.8
             tensorflow: 2.0.4
