Update some libraries and modify README

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ exclude =
     docker/*
     examples/*
 max-line-length = 100
-max-complexity = 10
+max-complexity = 15
 
 [yapf]
 column_limit = 100
@@ -34,9 +34,10 @@ addopts =
     --cache-clear
     --cov=tf_keras_vis/
     --cov-report=term-missing
-    --pep8
-pep8maxlinelength = 100
-pep8maxcomplexity = 10
+    --pycodestyle
+
+[pycodestyle]
+max-line-length = 100
 
 [coverage:run]
 omit =
