--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,25 +21,14 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8]
         tensorflow: [2.0.4, 2.1.3, 2.2.2, 2.3.2, 2.4.1, 2.5.0]
-        extra-require: ["develop,examples", "develop,examples,tfa"]
         exclude:
           - python-version: 3.8
             tensorflow: 2.0.4
           - python-version: 3.8
             tensorflow: 2.1.3
-          - tensorflow: 2.0.4
-            extra-require: "develop,examples,tfa"
-          - tensorflow: 2.1.3
-            extra-require: "develop,examples,tfa"
-          - tensorflow: 2.2.2
-            extra-require: "develop,examples,tfa"
         include:
           - python-version: 3.9
             tensorflow: 2.5.0
-            extra-require: "develop,examples"
-          - python-version: 3.9
-            tensorflow: 2.5.0
-            extra-require: "develop,examples,tfa"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -52,7 +41,7 @@ jobs:
         python -m pip install --no-cache-dir --upgrade setuptools
     - name: Install dependencies
       run: |
-        python -m pip install --no-cache-dir -e .[${{ matrix.extra-require }}] tensorflow==${{ matrix.tensorflow }}
+        python -m pip install --no-cache-dir -e .[develop,examples] tensorflow==${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         PYTHONPATH=$PWD:$PYTHONPATH py.test
