Update some files

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,8 @@ addopts =
     --cov=tf_keras_vis/
     --cov-report=term-missing
     --pycodestyle
+env =
+    TF_KERAS_VIS_MAX_STEPS=3
 
 [pycodestyle]
 max-line-length = 100
@@ -54,6 +56,7 @@ omit =
     __pycache__/*
     tf_keras_vis/utils/callbacks.py
     tf_keras_vis/utils/losses.py
+    tf_keras_vis/utils/input_modifiers.py
 
 [coverage:report]
 exclude_lines =
