--- a/setup.cfg
+++ b/setup.cfg
@@ -12,12 +12,13 @@ exclude =
     dockerfiles
     docs
     examples
-max-line-length = 100
+max-line-length = 99
 max-complexity = 15
+docstring-convention = google
 
 [yapf]
 based_on_style = pep8
-column_limit = 100
+column_limit = 99
 spaces_before_comment = 2
 
 [isort]
@@ -31,7 +32,7 @@ skip =
     dockerfiles
     docs
     examples
-line_length = 100
+line_length = 99
 
 [tool:pytest]
 addopts =
@@ -45,7 +46,7 @@ env =
     TF_KERAS_VIS_MAX_STEPS=3
 
 [pycodestyle]
-max-line-length = 100
+max-line-length = 99
 exclude = docs/*
 
 [coverage:run]
