--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,9 +8,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: "30 1 * * *"
 
 env:
-  TF_KERAS_VIS_MAX_STEPS: 2
+  TF_KERAS_VIS_MAX_STEPS: 3
 
 jobs:
   build:
@@ -19,28 +21,39 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        tensorflow: [2.0.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0]
+        tensorflow: [2.0.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, pre]
         exclude:
           - python-version: 3.8
             tensorflow: 2.0.0
           - python-version: 3.8
             tensorflow: 2.1.0
+          - python-version: 3.6
+            tensorflow: pre
         include:
           - python-version: 3.9
             tensorflow: 2.5.0
+          - python-version: 3.9
+            tensorflow: pre
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
+    - name: Install dependencies with pre-released Tensorflow
+      if: matrix.tensorflow == 'pre'
+      run: |
+        pip install --upgrade -e .[develop,examples] --pre tensorflow
+    - name: Install dependencies
+      if: matrix.tensorflow != 'pre'
+      run: |
         pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
-        pytest
+        pytest -n auto --dist loadscope
       timeout-minutes: 60
     - name: Test attentions.ipynb
       run: |
