--- a/.github/workflows/python-package-up-to-TF2.5.yml
+++ b/.github/workflows/python-package-up-to-TF2.5.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python package up to TF2.5
 
 on:
   push:
@@ -18,19 +18,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        tensorflow: [2.6.0]
-        keras: [2.6.0]
+        python-version: [3.6, 3.7, 3.8]
+        tensorflow: [2.0.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0]
+        exclude:
+          - python-version: 3.8
+            tensorflow: 2.0.0
+          - python-version: 3.8
+            tensorflow: 2.1.0
+        include:
+          - python-version: 3.9
+            tensorflow: 2.5.0
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Upgrade pip and Install dependencies
+    - name: Upgrade pip
       run: |
-        pip install --upgrade pip
-        pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.keras }}
+        python -m pip install --upgrade pip
+    - name: Install dependencies
+      run: |
+        pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
