--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -35,27 +35,27 @@ jobs:
     - name: Install current Keras
       if: matrix.keras == 'current'
       run: |
-        python -m pip pip install --upgrade keras
+        python -m pip install --upgrade keras
     - name: Install pre-released Keras
       if: matrix.keras == 'pre'
       run: |
-        python -m pip pip install --upgrade --pre keras
+        python -m pip install --upgrade --pre keras
     - name: Install nightly Keras
       if: matrix.keras == 'nightly'
       run: |
-        python -m pip pip install --upgrade --quiet keras-nightly
+        python -m pip install --upgrade --quiet keras-nightly
     - name: Install current Tensorflow
       if: matrix.tensorflow == 'current'
       run: |
-        python -m pip pip install --upgrade tensorflow
+        python -m pip install --upgrade tensorflow
     - name: Install pre-released Tensorflow
       if: matrix.tensorflow == 'pre'
       run: |
-        python -m pip pip install --upgrade --pre tensorflow
+        python -m pip install --upgrade --pre tensorflow
     - name: Install nightly Tensorflow
       if: matrix.tensorflow == 'nightly'
       run: |
-        python -m pip pip install --upgrade --quiet tf-nightly
+        python -m pip install --upgrade --quiet tf-nightly
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -e .[develop,examples]
