--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,8 +29,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade pip and Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.keras }}
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.keras }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
