--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,8 +19,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        tensorflow: [2.6.0]
-        keras: [2.6.0]
+        tensorflow: [2.6.0, 2.7.0]
+        keras: [2.6.0, 2.7.0]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
