--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,7 +20,6 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
         tensorflow: [2.6.0, 2.7.0]
-        keras: [2.6.0, 2.7.0]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -30,7 +29,7 @@ jobs:
     - name: Upgrade pip and Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.keras }}
+        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
