--- a/.github/workflows/sphinx-publish.yml
+++ b/.github/workflows/sphinx-publish.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade -e .[docs] tensorflow
+        python -m pip install --upgrade -e .[docs] tensorflow
     - name: Clone the documentation project
       run: |
         git clone -n https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/keisen/tf-keras-vis-docs.git docs/_build
