Add support for Python 3.10 and drop support for Python 3.6

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,6 +7,9 @@ on:
   release:
     types: [published]
 
+env:
+  PYTHON_VERSION: 3.8
+
 jobs:
   deploy:
 
@@ -14,10 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: Set up Python ${{ PYTHON_VERSION }}
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: ${{ PYTHON_VERSION }}
     - name: Install dependencies
       run: |
         python -m pip install --no-cache-dir --upgrade pip
