--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,6 +20,9 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
         tensorflow: [2.6.0, 2.7.0, 2.8.0]
+        include:
+          - python-version: 3.10
+            tensorflow: 2.8.0
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
