--- a/.github/workflows/sphinx-publish.yml
+++ b/.github/workflows/sphinx-publish.yml
@@ -10,17 +10,16 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ACCESS_KEY: ${{ secrets.DOCUMENT_PUBLISHING }}
-  PYTHON_VERSION: 3.8
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ PYTHON_VERSION }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ PYTHON_VERSION }}
+        python-version: 3.8
     - name: Install pandoc
       run: |
         sudo apt update
