--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,9 +7,6 @@ on:
   release:
     types: [published]
 
-env:
-  PYTHON_VERSION: 3.8
-
 jobs:
   deploy:
 
@@ -17,10 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ PYTHON_VERSION }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ PYTHON_VERSION }}
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --no-cache-dir --upgrade pip
