--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: [3.7, 3.8, 3.9, '3.10']
         tensorflow: [current, pre, nightly]
     steps:
     - uses: actions/checkout@v2
