--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -7,7 +7,6 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
   schedule:
     - cron: "30 1 * * *"
 
@@ -21,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9, '3.10']
-        tensorflow: [current, pre, nightly]
+        tensorflow: [current, pre]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -39,10 +38,6 @@ jobs:
       if: matrix.tensorflow == 'pre'
       run: |
         python -m pip install --upgrade --pre tensorflow keras
-    - name: Install nightly Tensorflow
-      if: matrix.tensorflow == 'nightly'
-      run: |
-        python -m pip install --upgrade --quiet tf-nightly keras-nightly
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -e .[develop,examples]
