--- a/.github/workflows/python-package-up-to-TF2.5.yml
+++ b/.github/workflows/python-package-up-to-TF2.5.yml
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }}
+        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} protobuf~=3.20.0
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
