--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,15 +17,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        tensorflow: [2.6.0, 2.7.0, 2.8.0, 2.9.0, 2.10]
-        include:
+        python-version: [3.7, 3.8, 3.9, '3.10']
+        tensorflow: [2.6.0, 2.7.0, 2.8.0, 2.9.0, '2.10.0', '2.11.0']
+        exclude:
           - python-version: '3.10'
-            tensorflow: 2.8.0
+            tensorflow: 2.6.0
           - python-version: '3.10'
-            tensorflow: 2.9.0
-          - python-version: '3.10'
-            tensorflow: 2.10.0
+            tensorflow: 2.7.0
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
