--- a/.github/workflows/python-package-up-to-TF2.11.yml
+++ b/.github/workflows/python-package-up-to-TF2.11.yml
@@ -1,14 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package run by Cron
+name: Python package
 
 on:
   push:
     branches: [ master ]
   pull_request:
-  schedule:
-    - cron: "30 1 * * *"
 
 env:
   TF_KERAS_VIS_MAX_STEPS: 3
@@ -19,28 +17,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, '3.10', '3.11']
-        tensorflow: [current, pre]
+        python-version: [3.7, 3.8, 3.9, '3.10']
+        tensorflow: [2.6.0, 2.7.0, 2.8.0, 2.9.0, '2.10.0', '2.11.0']
+        exclude:
+          - python-version: '3.10'
+            tensorflow: 2.6.0
+          - python-version: '3.10'
+            tensorflow: 2.7.0
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Upgrade pip
+    - name: Upgrade pip and Install dependencies
       run: |
         python -m pip install --upgrade pip
-    - name: Install current Tensorflow
-      if: matrix.tensorflow == 'current'
-      run: |
-        python -m pip install --upgrade tensorflow keras
-    - name: Install pre-released Tensorflow
-      if: matrix.tensorflow == 'pre'
-      run: |
-        python -m pip install --upgrade --pre tensorflow keras
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade -e .[develop,examples]
+        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
