--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,7 +18,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, '3.10', '3.11']
-        tensorflow: ['2.12.0']
+        tensorflow: ['2.12.0', '2.13.0', '2.14.0']
+        exclude:
+          - python-version: 3.8
+            tensorflow: '2.14.0'
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
