--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,14 +18,21 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, '3.10', '3.11']
-        tensorflow: ['2.12.0', '2.13.0', '2.14.0']
+        tensorflow: ['2.12.0', '2.13.0', '2.14.0', '2.15.0', '2.16.0']
         exclude:
           - python-version: 3.8
             tensorflow: '2.14.0'
+          - python-version: 3.8
+            tensorflow: '2.15.0'
+          - python-version: 3.8
+            tensorflow: '2.16.0'
+        include:
+          - python-version: '3.12'
+            tensorflow: '2.16.0'
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade pip and Install dependencies
