--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -33,11 +33,11 @@ jobs:
     - name: Install current Tensorflow
       if: matrix.tensorflow == 'current'
       run: |
-        python -m pip install --upgrade tensorflow keras
+        python -m pip install --upgrade tensorflow
     - name: Install pre-released Tensorflow
       if: matrix.tensorflow == 'pre'
       run: |
-        python -m pip install --upgrade --pre tensorflow keras
+        python -m pip install --upgrade --pre tensorflow
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -e .[develop,examples]
