--- a/.github/workflows/python-package-up-to-TF2.11.yml
+++ b/.github/workflows/python-package-up-to-TF2.11.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Upgrade pip and Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} keras~=${{ matrix.tensorflow }}
+        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
