--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.9, '3.10', '3.11', '3.12']
-        tensorflow: [current, pre]
+        tensorflow: [current, pre, nightly]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -38,6 +38,10 @@ jobs:
       if: matrix.tensorflow == 'pre'
       run: |
         python -m pip install --upgrade --pre tensorflow
+    - name: Install pre-released Tensorflow
+      if: matrix.tensorflow == 'nightly'
+      run: |
+        python -m pip install --upgrade tf-nightly
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -e .[develop,examples]
