--- a/.github/workflows/python-package-TF2.17.yml
+++ b/.github/workflows/python-package-TF2.17.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python package for py39
 
 on:
   push:
@@ -17,23 +17,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
-        tensorflow: [2.6.0, 2.7.0, 2.8.0, 2.9.0, '2.10.0', '2.11.0']
-        exclude:
-          - python-version: '3.10'
-            tensorflow: 2.6.0
-          - python-version: '3.10'
-            tensorflow: 2.7.0
+        python-version: ['3.9', '3.10', '3.11', '3.12']
+        tensorflow: ['2.16.0', '2.17.0']
+        keras: ['keras1x', 'keras2x']
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Upgrade pip and Install dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade -e .[develop,examples,${{matrix.keras}}] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
