--- a/.github/workflows/python-package-TF2.5.yml
+++ b/.github/workflows/python-package-TF2.5.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package up to TF2.5
+name: Python package for py37
 
 on:
   push:
@@ -17,16 +17,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8]
-        tensorflow: [2.0.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0]
-        exclude:
-          - python-version: 3.8
-            tensorflow: 2.0.0
-          - python-version: 3.8
-            tensorflow: 2.1.0
-        include:
-          - python-version: 3.9
-            tensorflow: 2.5.0
+        python-version: ['3.7', '3.8']
+        tensorflow: ['2.0.0', '2.1.0', '2.2.0', '2.3.0', '2.4.0', '2.5.0']
+      include:
+        - python-version: '3.9'
+          tensorflow: '2.5.0'
+      exclude:
+        - python-version: '3.8'
+          tensorflow: '2.0.0'
+        - python-version: '3.8'
+          tensorflow: '2.1.0'
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade -e .[develop,examples] tensorflow~=${{ matrix.tensorflow }} protobuf~=3.20.0
+        python -m pip install --upgrade -e .[develop,examples,numpy1x,protobuf3] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
