--- a/.github/workflows/python-package-TF2.15.yml
+++ b/.github/workflows/python-package-TF2.15.yml
@@ -17,26 +17,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10']
         tensorflow: ['2.6.0', '2.7.0', '2.8.0', '2.9.0', '2.10.0', '2.11.0', '2.12.0', '2.13.0', '2.14.0', '2.15.0']
-      include:
-        - python-version: '3.11'
-          tensorflow: '2.12.0'
-        - python-version: '3.11'
-          tensorflow: '2.13.0'
-        - python-version: '3.11'
-          tensorflow: '2.14.0'
-        - python-version: '3.11'
-          tensorflow: '2.15.0'
-      exclude:
-        - python-version: '3.8'
-          tensorflow: '2.14.0'
-        - python-version: '3.8'
-          tensorflow: '2.15.0'
-        - python-version: '3.10'
-          tensorflow: '2.6.0'
-        - python-version: '3.10'
-          tensorflow: '2.7.0'
+        include:
+          - python-version: '3.11'
+            tensorflow: '2.12.0'
+          - python-version: '3.11'
+            tensorflow: '2.13.0'
+          - python-version: '3.11'
+            tensorflow: '2.14.0'
+          - python-version: '3.11'
+            tensorflow: '2.15.0'
+        exclude:
+          - python-version: '3.8'
+            tensorflow: '2.14.0'
+          - python-version: '3.8'
+            tensorflow: '2.15.0'
+          - python-version: '3.10'
+            tensorflow: '2.6.0'
+          - python-version: '3.10'
+            tensorflow: '2.7.0'
           
     steps:
     - uses: actions/checkout@v4
