--- a/.github/workflows/python-package-TF2.17.yml
+++ b/.github/workflows/python-package-TF2.17.yml
@@ -13,13 +13,39 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
-        tensorflow: ['2.16.0', '2.17.0']
-        keras: ['keras1x', 'keras2x']
+        python-version: ['3.8', '3.9', '3.10']
+        tensorflow: ['2.6.0', '2.7.0', '2.8.0', '2.9.0', '2.10.0', '2.11.0', '2.12.0', '2.13.0', '2.14.0', '2.15.0', '2.16.0', '2.17.0']
+        include:
+          - python-version: '3.11'
+            tensorflow: '2.12.0'
+          - python-version: '3.11'
+            tensorflow: '2.13.0'
+          - python-version: '3.11'
+            tensorflow: '2.14.0'
+          - python-version: '3.11'
+            tensorflow: '2.15.0'
+          - python-version: '3.11'
+            tensorflow: '2.16.0'
+          - python-version: '3.11'
+            tensorflow: '2.17.0'
+          - python-version: '3.12'
+            tensorflow: '2.16.0'
+          - python-version: '3.12'
+            tensorflow: '2.17.0'
+        exclude:
+          - python-version: '3.8'
+            tensorflow: '2.14.0'
+          - python-version: '3.8'
+            tensorflow: '2.15.0'
+          - python-version: '3.10'
+            tensorflow: '2.6.0'
+          - python-version: '3.10'
+            tensorflow: '2.7.0'
+          
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -31,7 +57,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade -e .[develop,examples,${{matrix.keras}}] tensorflow~=${{ matrix.tensorflow }}
+        python -m pip install --upgrade -e .[develop,examples,numpy1x] tensorflow~=${{ matrix.tensorflow }}
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
