--- a/.github/workflows/python-package-cron.yml
+++ b/.github/workflows/python-package-cron.yml
@@ -30,21 +30,18 @@ jobs:
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-    - name: Install current Tensorflow
+    - name: Install dependencies and current Tensorflow
       if: matrix.tensorflow == 'current'
       run: |
-        python -m pip install --upgrade tensorflow
-    - name: Install pre-released Tensorflow
+        python -m pip install --upgrade -e .[develop,examples] --upgrade tensorflow
+    - name: Install dependencies and pre-released Tensorflow
       if: matrix.tensorflow == 'pre'
       run: |
-        python -m pip install --upgrade --pre tensorflow
-    - name: Install pre-released Tensorflow
+        python -m pip install --upgrade -e .[develop,examples] --upgrade --pre tensorflow
+    - name: Install dependencies and nightly-built Tensorflow
       if: matrix.tensorflow == 'nightly'
       run: |
-        python -m pip install --upgrade tf-nightly
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade -e .[develop,examples]
+        python -m pip install --upgrade -e .[develop,examples] --upgrade tf-nightly
     - name: Test with pytest
       run: |
         pytest -n auto --dist loadscope
